# openapi/openapi.yaml
@@ -49,6 +49,33 @@ paths:
           description: Not Found
         '500':
           description: Internal Server Error
+  /v1/employees/{employee_id}:
+    get:
+      description: Get all employees
+      summary: get employees
+      operationId: getEmployees
+      security: []
+      parameters:
+        - name: employee_id
+          in: path
+          description: ID of employee to return
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                oneOf:
+                  - $ref: '#/components/schemas/Member'
+                  - $ref: '#/components/schemas/Manager'
+
+        '400':
+          description: Bad Request
+        '500':
+          description: Internal Server Error
 components:
   schemas:
     User:
@@ -72,3 +99,43 @@ components:
       type: array
       items:
         $ref: '#/components/schemas/User'
+    Member:
+      type: object
+      properties:
+        id:
+          type: string
+        name:
+          type: string
+        email:
+          type: string
+        department:
+          type: string
+        team:
+          type: string
+      required:
+        - id
+        - name
+        - email
+        - department
+        - team
+    Manager:
+      type: object
+      properties:
+        id:
+          type: string
+        name:
+          type: string
+        email:
+          type: string
+        department:
+          type: string
+        teams:
+          type: array
+          items:
+            type: string
+      required:
+        - id
+        - name
+        - email
+        - department
+        - teams
